[package]
name = "glommio_play"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atoi = "0.3.2"
bytes = "1"
futures = "~0.3.5"
futures-lite = "1.11.1"
tokio = { version = "1", features = ["full"] }
glommio = "0.6.0"
